# python-maturin-cedar

./: .gitignore  Cargo.toml  pyproject.toml
src/: lib.rs
tests/: test_maturin_cedar.py
