[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "test-maturin-cedar"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.1.0"
description = "cedar-policy bindings"
authors = [
    {name = "Naoya Yamashita", email = "conao3@gmail.com"},
]
dependencies = []
readme = "README.md"
license = {text = "Apache-2.0"}

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pdm]
package-type = "library"
